manifests/deployment.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "sarthak"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "sarthak"
    spec:
      containers:
        - name: "sarthak"
          image: "sarthak0.azurecr.io/sarthak"
          ports:
          - containerPort: 8080
